# biosignalsnotebooks

./: .gitignore  LICENSE  README.md  old_postBuild - Copy  postBuild  requirements.txt
biosignalsnotebooks/: LICENSE.txt  MANIFEST.in  README.md  README_BSN.md  README_BSNB.md  __setup.py  pyproject.toml  setup.py  setup_linux.py  simpleBokehFigure.html  sync_file.txt  view
biosignalsnotebooks/biosignalsnotebooks/: README.md  __init__.py  __notebook_support__.py  android.py  aux_functions.py  conversion.py  detect.py  extract.py  factory.py  load.py  process.py  signal_samples.py  synchronisation.py  train_and_classify.py  visualise.html  visualise.py
biosignalsnotebooks/biosignalsnotebooks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
biosignalsnotebooks/biosignalsnotebooks/biosignalsnotebooks/: detect.py  signal_samples.py
biosignalsnotebooks/biosignalsnotebooks/biosignalsnotebooks.egg-info/: PKG-INFO  top_level.txt
biosignalsnotebooks/biosignalsnotebooks/external_packages/novainstrumentation/: __init__.py  filter.py  freq_analysis.py  peaks.py  stat_analysis.py  tools.py
biosignalsnotebooks/biosignalsnotebooks/external_packages/pyEDFlib-0.1.14/: PKG-INFO  setup.cfg
biosignalsnotebooks/biosignalsnotebooks/notebook_files/: __update_content__.py  cell_content_strings.py
biosignalsnotebooks/biosignalsnotebooks/notebook_files/MainFiles/: group_by_difficulty.py
biosignalsnotebooks/biosignalsnotebooks/notebook_files/github/: README_TEMPLATE.md
biosignalsnotebooks/biosignalsnotebooks/old/: _cell_content_strings.py
biosignalsnotebooks/biosignalsnotebooks/old/signal_samples/: ecg_sample_info.json
biosignalsnotebooks/biosignalsnotebooks/opensignalsfactory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
biosignalsnotebooks/biosignalsnotebooks_notebooks/signal_samples/: ecg_4000_Hz_info.json
biosignalsnotebooks/generated_plots/: plot_2018_11_07_13_03_45.html  plot_2018_11_07_13_39_11.html  plot_2018_11_07_13_42_03.html  plot_2018_11_07_13_43_12.html
biosignalsnotebooks/header_footer/: cell_content_strings.py  main.py
biosignalsnotebooks/header_footer/notebook_code/MainFiles/: signal_samples.py
biosignalsnotebooks/opensignalsfactory.egg-info/: top_level.txt
(+905 files in other folders)
